fixed and cleaned up require pieces code. fabric waystones are required now too